<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/book_background"
    android:orientation="vertical"
    android:padding="6dp"
    android:layout_margin="4dp">
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/book_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/author"
        android:textStyle="italic"
        android:textSize="16sp"
    android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/publisher"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:textSize="16sp"  />

    <TextView
        android:id="@+id/publishedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/published_date"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="italic"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/description" />


</LinearLayout>